--- a/Javascript ES6/quick tip/index.html
+++ b/Javascript ES6/quick tip/index.html
@@ -14,5 +14,6 @@
     <script src="script.js"></script>
     <h1>Assalamualykum Dunya</h1>
     <h2>EDIT lagi</h2>
+    <h3>TES LINUX BASH</h3>
 </body>
 </html>
