--- a/Javascript ES6/quick tip/index.html
+++ b/Javascript ES6/quick tip/index.html
@@ -15,5 +15,6 @@
     <h1>Assalamualykum Dunya</h1>
     <h2>EDIT lagi</h2>
     <h3>TES LINUX BASH</h3>
+    <h4>Switch Folder git</h4>
 </body>
 </html>
