--- a/Javascript ES6/10.2 latihan callback/index.html
+++ b/Javascript ES6/10.2 latihan callback/index.html
@@ -29,26 +29,27 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="container-fluid">
+                       <!-- start cut -->
+                        <!-- <div class="container-fluid">
                             <div class="row">
                                 <div class="col-md-3">
-                                    <img src="" class="img-fluid">
+                                    <img src="" class="img-fluid" alt="">
                                 </div>
                                 <div class="col-md">
                                     <ul class="list-group">
-                                        <li class="list-group-item">An item</li>
-                                        <li class="list-group-item">A second item</li>
-                                        <li class="list-group-item">A third item</li>
-                                        <li class="list-group-item">A fourth item</li>
-                                        <li class="list-group-item">And a fifth one</li>
+                                        <li class="list-group-item"><h4>Fast X (2023)</h4></li>
+                                        <li class="list-group-item"><strong>Director : </strong>Pian</li>
+                                        <li class="list-group-item"><strong>Actor : </strong>Dominic Toretto</li>
+                                        <li class="list-group-item"><strong>Genre : </strong>Criminal</li>
+                                        <li class="list-group-item"><strong>Rating : </strong>6.8/10</li>
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
+                        <!-- end cut -->
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                     </div>
                 </div>
