--- a/Javascript ES6/10.2 latihan callback/index.html
+++ b/Javascript ES6/10.2 latihan callback/index.html
@@ -13,6 +13,17 @@
                 <h1>DB BOB CINEMA</h1>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control input-keyword" placeholder="Search Movie ...">
+                    <button class="btn btn-primary search-button" type="button" id="button-addon2">Search</button>
+                </div>
+            </div>
+        </div>
+
+
         <div class="row movie-container">
             
         </div>
