Add Folder Fetch

--- a/Javascript ES6/12 Fetch/index.html
+++ b/Javascript ES6/12 Fetch/index.html
@@ -5,39 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BOB CINEMA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: rgb(46, 46, 46);
-        }
-
-        .text-white {
-            color: white;
-        }
-
-        .bg-gray {
-            background-color: rgb(159, 159, 159);
-        }
-    </style>
   </head>
   <body>
     <div class="container">
         <div class="row mt-5">
             <div class="col">
-                <h1 class="text-white">DB BOB CINEMA</h1>
+                <h1>DB BOB CINEMA</h1>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-8">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control input-keyword bg-gray" placeholder="Search Movie ...">
+                    <input type="text" class="form-control input-keyword" placeholder="Search Movie ...">
                     <button class="btn btn-primary search-button" type="button" id="button-addon2">Search</button>
                 </div>
             </div>
         </div>
 
 
-        <div class="row movie-container">
+        <div class="row movie-container">   
             
         </div>
     </div>
